[package]
name = "etherip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
socket2 = { version = "0.5.8", features = ["all"] }
tokio = { version = "1.44.0", features = ["full"] }
tun = { version = "0.7.13", features = ["async"] }
