[package]
name = "etherip"
version = "0.1.12-alpha"
edition = "2024"

[package.metadata.deb]
maintainer = "tuna2134 <hello@tuna2134.dev>"
copyright = "2025, tuna2134 <hello@tuna2134.dev>"
license-file = ["LICENSE", "4"]
extended-description = "Rust EtherIP"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/etherip", "usr/bin/", "755"],
    { source = "README.md", dest = "usr/share/doc/etherip/README", mode = "644"},
]

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
ipnet = "2.11.0"
socket2 = { version = "0.5.8", features = ["all"] }
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tun = { version = "0.7.13", features = ["async"] }
